<resources>
    <string name="app_name">SmartApe</string>
    <string name="text_app_s_logo">App\'s Logo</string>
    <string name="text_or">OR</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>
    <string name="text_need_an_account">Don\'t have an account? <u>Sign in</u> </string>
    <string name="text_don_t_have_an_account">Don\'t have an account?</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_log_in">LOG IN</string>
    <string name="text_app_s_title">App\'s title</string>
    <string name="text_profile_item">Profile</string>
    <string name="text_groups_item">Groups</string>
    <string name="text_saved_item">Saved</string>
    <string name="text_my_quizzes_item">My Quizzes</string>
    <string name="text_others_item">Others</string>
    <string name="text_settings_item">Settings</string>
    <string name="text_donate_item">Donate</string>
    <string name="text_notifications_item">Notifications</string>
    <string name="text_favorite_quiz">Favorite quiz</string>
    <string name="text_quiz_picture">Quiz picture</string>
    <string name="text_created_by">Created by:</string>
    <string name="text_user_picture">User picture</string>
    <string name="text_divisor">|</string>
    <string name="text_mark_quiz_as_saved">Mark quiz as saved</string>
    <string name="text_mark_quiz_as_favorite">Mark quiz as favorite</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_top_this">Top this</string>
    <string name="text_quiz_title">Quiz title</string>
    <string name="text_category">Category</string>
    <string name="text_name">Name</string>
    <string name="text_description">Description</string>
    <string name="text_colon">:</string>
    <string name="text_quiz_description">Quiz description</string>
    <string name="text_time_limit">Time limit</string>
    <string name="text_next">NEXT</string>
    <string name="text_quizzes_item">Quizzes</string>
    <string name="text_dashboard_item">Feed</string>
    <string name="tab_quizzes">Quizzes</string>
    <string name="text_00">00</string>
    <string name="text_create_your_own_quiz">CREATE YOUR OWN QUIZ</string>
    <string name="text_edit_your_question">Edit your question</string>
    <string name="text_delete_your_question">Delete your question</string>
    <string name="text_create_quiz">CREATE QUIZ</string>
    <string name="text_add_questions">Add questions</string>
    <string name="text_previous">Previous</string>
    <string name="text_create_by">Create by:</string>
    <string name="text_created_on">Created on:</string>
    <string name="text_start">Start</string>
    <string name="text_logout" translatable="false">Logout</string>
    <string name="text_question">Question:</string>
    <string name="text_add_question">ADD QUESTION</string>
    <string name="text_question_type">Question type:</string>
    <string name="text_point">.</string>
    <string name="text_answer">Answer</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_your_password">Confirm your password</string>
    <string name="text_sign_in_to_smartape">Sign in to SmartApe</string>
    <string name="text_button_sign_in">SIGN IN</string>
    <string name="text_email_address">Email address</string>
    <string name="text_successful_login">Login successful</string>
    <string name="text_broadcast_item">Broadcast</string>
    <string name="text_finish">Finish</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="text_ok_button">OK</string>
    <string name="text_edit_answer">Edit answer</string>
    <string name="text_new_answer">New answer</string>
    <string name="text_remove_button">Remove</string>
    <string name="text_empty_answer_error">Answer must not be empty</string>
    <string name="text_update_question">Update question</string>
    <string name="text_empty_premise_error">Question premise must not be empty</string>
    <string name="text_empty_answers_error">There must be at least one answer</string>
    <string name="text_average">Average</string>
    <string name="text_group_created">Group created</string>
    <string name="text_no_groups_found">No groups found</string>
    <string name="text_error_groups">Error searching groups</string>
    <string name="text_connected">Connected</string>
    <string name="text_searching">Searching…</string>
    <string name="text_connecting">Connecting…</string>
    <string name="text_empty_questions_error">Quiz must have at least one question</string>
    <string name="text_empty_title_error">Title must not be empty</string>
    <string name="text_empty_fields_error">Debes completar todos los campos</string>
    <string name="text_waiting_results">Waiting for results</string>
    <string name="text_available_quiz_broadcasts">Available Quiz Broadcasts</string>
    <string name="text_result">Results</string>
    <string name="text_correct">Correct</string>
    <string name="text_grade">Grade</string>

    <string-array name="trending_options">
        <item>Month</item>
        <item>Week</item>
        <item>Today</item>
    </string-array>

    <string-array name="quiz_category_options">
        <item>Mathematics</item>
        <item>Science</item>
        <item>History</item>
        <item>Language</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="question_category_options">
        <item>Multiple choice</item>
        <item>True or False</item>
    </string-array>
</resources>
