<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_signIn_allFields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/textView_signIn_pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_sign_in_to_smartape"
            android:textColor="@color/colorTextOnAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imageView_signIn_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/text_app_s_logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView_signIn_pageTitle"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editText_signIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email_address"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_below="@id/imageView_signIn_logo"
            android:background="@drawable/shape_edit_text"
            android:padding="6dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editText_signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_below="@id/editText_signIn_email"
            android:background="@drawable/shape_edit_text"
            android:padding="6dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editText_signIn_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_confirm_your_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_below="@id/editText_signIn_password"
            android:background="@drawable/shape_edit_text"
            android:padding="6dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/button_signIn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/text_button_sign_in"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="6dp"
            android:background="@drawable/shape_button"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_signIn_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progressDrawable="@drawable/circular_progress_view"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

</RelativeLayout>