<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:id="@+id/linearLayout_answerQuestions_mainFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_answerQuestion_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:lines="2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_answerQuestion_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/linearLayout_answerQuestions_mainFields"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_answerQuestions_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_answerQuestion_previousQuestion"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button"
                android:padding="4dp"
                android:text="@string/text_previous"
                android:textColor="@color/colorTextOnAccent" />

            <Button
                android:id="@+id/button_answerQuestion_nextQuestion"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_button"
                android:padding="4dp"
                android:text="@string/text_next"
                android:textColor="@color/colorTextOnAccent" />
        </LinearLayout>

        <Button
            android:id="@+id/button_answerQuestion_finish"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_button"
            android:padding="4dp"
            android:text="@string/text_finish"
            android:textColor="@color/colorTextOnAccent" />
    </LinearLayout>
</RelativeLayout>