<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_startQuiz_quizTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTextOnAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/linearLayout_startQuiz_quizOwnerField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_startQuiz_quizTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/textView_startQuiz_quizCreatedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_create_by"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_startQuiz_quizOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorTextOnAccent"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_startQuiz_quizDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_startQuiz_quizOwnerField"
        android:lines="5"
        android:maxLines="5"
        android:textColor="@color/colorTextOnAccent"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/linearLayout_startQuiz_quizDateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_startQuiz_quizDescription"
        android:layout_centerHorizontal="true"
        android:gravity="start">

        <TextView
            android:id="@+id/textView_startQuiz_quizCreatedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_created_on" />

        <TextView
            android:id="@+id/textView_startQuiz_quizDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextOnAccent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_startQuiz_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_startQuiz_quizDateField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp">

        <Button
            android:id="@+id/button_startQuiz_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_button"
            android:text="@string/text_start"/>

    </RelativeLayout>
</RelativeLayout>