<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/linearLayout_recycler_userSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_recycler_userPicture"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/text_user_picture" />

            <TextView
                android:id="@+id/textView_recycler_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textColor="@color/colorTextOnAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_recycler_userUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textColor="@color/colorSecundaryText"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/textView_recycler_quizDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textColor="@color/colorSecundaryText" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout_recycler_quizSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_recycler_userSection">

            <TextView
                android:id="@+id/textView_recycler_quizTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorTextOnAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_recycler_quizDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_recycler_quizTitle"
                android:ellipsize="end"
                android:lines="3"
                android:textColor="@color/colorTextOnAccent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout_recycler_quizSection">

            <CheckBox
                android:id="@+id/imageButton_recycler_quizSaved"
                android:layout_width="@dimen/checkbox_size"
                android:layout_height="@dimen/checkbox_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/button_save"
                android:contentDescription="@string/text_mark_quiz_as_saved"
                android:button="@null" />

            <CheckBox
                android:id="@+id/imageButton_recycler_quizFavorite"
                android:layout_width="@dimen/checkbox_size"
                android:layout_height="@dimen/checkbox_size"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@id/imageButton_recycler_quizSaved"
                android:layout_toStartOf="@id/imageButton_recycler_quizSaved"
                android:background="@drawable/button_favorite"
                android:contentDescription="@string/text_mark_quiz_as_favorite"
                android:button="@null" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>